--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,20 +8,30 @@
   url = "#about"
   weight = 10
 
-# [[main]]
-#   name = "Posts"
-#   url = "#posts"
-#   weight = 20
-
 [[main]]
   name = "Publications"
-  url = "#featured"
-  weight = 30
+  url = "#publications"
+  weight = 20
 
 [[main]]
   name = "Projects"
   url = "#projects"
+  weight = 30
+
+[[main]]
+  name = "Competitions"
+  url = "#competitions"
   weight = 40
+
+[[main]]
+  name = "Experience"
+  url = "#experience"
+  weight = 50
+
+[[main]]
+  name = "Awards"
+  url = "#awards"
+  weight = 50
 
 # [[main]]
 #   name = "Contact"
